Uploaded file via upload

--- a/Bootstrap/task2.html
+++ b/Bootstrap/task2.html
@@ -82,10 +82,6 @@ a:focus {
     transition: .3s;
 }
 
-
-/**********************************/
-/********** Top Bar CSS ***********/
-/**********************************/
 .top-bar {
     position: relative;
     height: 90px;
@@ -160,10 +156,6 @@ a:focus {
     }
 }
 
-
-/**********************************/
-/*********** Nav Bar CSS **********/
-/**********************************/
 .nav-bar {
     position: relative;
     background: #fdbe33;
@@ -264,9 +256,6 @@ a:focus {
 }
 
 
-/*******************************/
-/******** Carousel CSS *********/
-/*******************************/
 .carousel {
     position: relative;
     width: 100%;
@@ -387,10 +376,6 @@ a:focus {
     animation-duration: 1.5s;
 }
 
-
-/*******************************/
-/******* Page Header CSS *******/
-/*******************************/
 .page-header {
     position: relative;
     margin-bottom: 45px;
@@ -472,10 +457,6 @@ a:focus {
     }
 }
 
-
-/*******************************/
-/******* Section Header ********/
-/*******************************/
 .section-header {
     position: relative;
     width: 100%;
@@ -502,10 +483,6 @@ a:focus {
     }
 }
 
-
-/*******************************/
-/********* Feature CSS *********/
-/*******************************/
 .feature {
     position: relative;
     margin-bottom: 45px;
@@ -689,7 +666,7 @@ a:focus {
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="carousel-1.jpg" alt="Carousel Image">
+                        <img src="Bootstrap/carousel-1.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Professional</p>
                             <h1 class="animated fadeInLeft">For Your Dream Project</h1>
